Add links and correct spelling
There were missing links in pizza.html, these links complement
the recipe.
Also there were spelling errors in all the html files and the README.md
file, so they were corrected.

--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -10,10 +10,10 @@
 
         <h3>Enchiladas verdes, a classical and delicious mexican dish!</h3>
         <p>The next is a brief but yet great description of this amazing dish. The Enchiladas Verdes is a mexican dish made with 
-            fried tortillas, chiken meat, chess, a great green sauce and sometimes accompained with rice, onions and avocado!
+            fried tortillas, chicken meat, chess, a great green sauce and sometimes accompanied with rice, onions and avocado!
         </p>
         <p>If you have never tasted this meal, you are missing an absolute delicious experience, and a not so hard to cook one!!
-            <br>But first let's look at the ingredients we will need.
+            <br>But first let's take a look at the ingredients we will need.
         </p>
 
         <h3>Ingredients</h3>
@@ -24,7 +24,7 @@
             <li>Serrano chili 40g</li>
             <li>cilantro</li>
             <li>Cream</li>
-            <li>One chiken breast</li>
+            <li>One chicken breast</li>
             <li>Pepper</li>
             <li>Chess</li>
             <li>Salt</li>
@@ -44,7 +44,7 @@
             </li>
             <li>
                 Next, we stir-fry the sauce in a previously hot frying pan
-                with oil, and add flavor with salt and papper at ease. Now
+                with oil, and add flavor with salt and pepper at ease. Now
                 we wait for the sauce to cook a little.
             </li>
             <li>For the chicken, we have to cook it in hot water with a piece
@@ -53,11 +53,11 @@
             </li>
             <li>Going on with the recipe we have to put the tortillas
                 in warm oil and remove the excess of it once we put them out.
-                We don't want totopos or chips, but neither the raw tortilla,
-                mind that the texture is manegeable and resistent.
+                We don't want tortilla chips, but neither the raw tortilla,
+                mind that the texture is manageable and resistent.
             </li>
             <li>Now, finally for making the enchiladas, we grab a tortilla,
-                fill it with chicken and give it form by benting the tortilla.<br>
+                fill it with chicken and give it form by bending the tortilla.<br>
                 To let them perfect we pour the sauce all over our enchiladas, all along
                 with the chess, cream, avocado and a twig of cilantro.<br>
                 If you wish tou can add some rice by the enchiladas.
