--- a/recipes/friedRice.html
+++ b/recipes/friedRice.html
@@ -10,7 +10,7 @@
         <img src="../images/friedRice.jpg" height="320" width="600">
 
         <h3>Fried Rice, an easy, nutritious and delicious dish!</h3>
-        <p>This recipe of rice has a good varierity of versions, since
+        <p>This recipe of rice has a good variety of versions, since
             it can be made with seafood, eggs, or meat. Although it is
             often used as an accompanying dish, it's equally 
         perfect for being the main dish.<br>
@@ -42,7 +42,7 @@
             <li>Now, we add bacon to wok, keep cooking for 4 minutes,
                 then we add the carrots and after another minute 
                 the peas, shallots and rice, after cooking 4 minutes 
-                we finally add the eggs and the soy souce, don't forget
+                we finally add the eggs and the soy sauce, don't forget
                 to keep string in these whole process of cooking. When 
                 the dish is heated and well cooked serve immediately.<br>
                 Now that should be it! All that there is left is to enjoy this
