--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -11,7 +11,7 @@
 
     <h3>Pepperoni Pizza, a complete classical and delicious dish!</h3>
     <p>The pizza is one of the most famous and favorite food of many people around the world, it has the advantage that it comes
-        in an limitless amount of varierities, with pineapple, different kinds of chesse and meats, vegetables, less or more
+        in an limitless amount of varieties, with pineapple, different kinds of cheese and meats, vegetables, less or more
     crunchy, etc. </p>
     <p>In this case we will focus on the classical pepperoni pizza, a safe, simple, but yet completely exquisite meal that will
         leave you asking for more!<br> 
@@ -30,19 +30,23 @@
 
     <h3>Recipe</h3>
     <ol>
-        <li>Preheat the oven to 425 degrees °F</li>
+        <li>Preheat the oven to 425 degrees °F.</li>
         <li>Roll out the dough on a lightly floured surface until
-            it's a 14-inch diameter circle
+            it's a 14-inch diameter circle.
         </li>
         <li>Now it's time to add the toppings, first the 
-            sauce, then the chesse and finally the pepperoni
-            and we season with black pepper
+            sauce, then the cheese and finally the pepperoni
+            and we season with black pepper.
         </li>
         <li>All that is left is to bake the pizza, this
             will take around 18 to 20 minutes until the 
             crusts are browned and the cheese is bubbly.<br>
-            If you'd like to make home-made tomato sauce 
-            and dough, please visit this link:<br>
+            If you'd like to make homemade tomato sauce 
+            and dough, please visit these links:<br>
+            <a href="https://joyfoodsunshine.com/easy-homemade-pizza-sauce-recipe/" target="_blank" 
+            rel="noopener noreferrer">For the sauce</a><br>
+            <a href="https://sallysbakingaddiction.com/homemade-pizza-crust-recipe/" target="_blank" 
+            rel="noopener noreferrer">For the dough</a><br>
             Now we slice and serve this delicious pizza!
         </li>
     </ol>
