--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <ul>
         <li><a href="recipes/enchiladas.html">Enchiladas Verdes Recipe</a></li>
         <li><a href="recipes/friedRice.html">Fried Rice Recipe</a></li>
-        <li><a href="recipes/pizza.html">Pizza Recipe</a></li>
+        <li><a href="recipes/pizza.html">Pepperonis Pizza Recipe</a></li>
         </ul>
     </body>
 </html>
