Create style.css and add style to all html files
The style of the html files was too simple, these aesthetic changes
improved the overall appearance of the project.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-
+        <link rel="stylesheet" href="style.css">
         <title>The Best Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <header>
+        <h1 class="title">Odin Recipes</h1>
+        </header>
+        
         <ul>
         <li><a href="recipes/enchiladas.html">Enchiladas Verdes Recipe</a></li>
         <li><a href="recipes/friedRice.html">Fried Rice Recipe</a></li>
