--- a/recipes/friedRice.html
+++ b/recipes/friedRice.html
@@ -2,21 +2,25 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../style.css">
         <title>The Best Fried Rice Recipe</title>
     </head>
 
     <body>
-        <h1>Fried Rice Recipe</h1>
+        <header>
+        <h1 class="title">Fried Rice Recipe</h1>
         <img src="../images/friedRice.jpg" height="320" width="600">
-
-        <h3>Fried Rice, an easy, nutritious and delicious dish!</h3>
+        </header>
+        
+        <div>
+        <h3 class="title">Fried Rice, an easy, nutritious and delicious dish!</h3>
         <p>This recipe of rice has a good variety of versions, since
             it can be made with seafood, eggs, or meat. Although it is
             often used as an accompanying dish, it's equally 
         perfect for being the main dish.<br>
         With that said let's jump right to the necessary ingredients!</p>
 
-        <h3>Ingredients</h3>
+        <h3 class="title">Ingredients</h3>
         <ul>
             <li>One cup of white rice</li>
             <li>Two eggs</li>
@@ -29,7 +33,7 @@
             <li>Salt and pepper</li>
         </ul>
 
-        <h3>Recipe</h3>
+        <h3 class="title">Recipe</h3>
         <ol>
             <li>First of all we need to cook the rice in a large
                 saucepan of boiling water for 12 minutes, after that
@@ -49,6 +53,7 @@
                 delicious fried rice!! 
             </li>
         </ol>
+    </div>
     </body>
 
 </html>
