--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -2,14 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../style.css">
     <title>The Best Pepperoni Pizza Recipe</title>
 </head>
 
 <body>
-    <h1>Pepperoni Pizza Recipe</h1>    
+    <header>
+    <h1 class="title">Pepperoni Pizza Recipe</h1>    
     <img src="../images/pizza.jpg" height="340" width="512">
+    </header>
 
-    <h3>Pepperoni Pizza, a complete classical and delicious dish!</h3>
+    <div>
+    <h3 class="title">Pepperoni Pizza, a complete classical and delicious dish!</h3>
     <p>The pizza is one of the most famous and favorite food of many people around the world, it has the advantage that it comes
         in an limitless amount of varieties, with pineapple, different kinds of cheese and meats, vegetables, less or more
     crunchy, etc. </p>
@@ -18,7 +22,7 @@
         Let's take a look at the ingredients for this preparation.
     </p>
 
-    <h3>Ingredients</h3>
+    <h3 class="title">Ingredients</h3>
     <ul>
         <li>16 ounces pizza dough</li>
         <li>1/2 cup pizza sauce</li>
@@ -28,7 +32,7 @@
         <li>1/2 teaspoon ground black pepper</li>
     </ul>
 
-    <h3>Recipe</h3>
+    <h3 class="title">Recipe</h3>
     <ol>
         <li>Preheat the oven to 425 degrees °F.</li>
         <li>Roll out the dough on a lightly floured surface until
@@ -50,6 +54,7 @@
             Now we slice and serve this delicious pizza!
         </li>
     </ol>
+</div>
 
 </body>
 </html>
