--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -2,13 +2,17 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../style.css">
         <title>The Best Enchiladas Verdes Recipe</title>
     </head>
     <body>
-        <h1>Enchiladas Verdes (Suizas) Recipe</h1>
+        <header>
+        <h1 class="title">Enchiladas Verdes (Suizas) Recipe</h1>
         <img src="../images/enchiladas.jpg" height="400" width="600">
-
-        <h3>Enchiladas verdes, a classical and delicious mexican dish!</h3>
+        </header>
+        
+        <div>
+        <h3 class="title">Enchiladas verdes, a classical and delicious mexican dish!</h3>
         <p>The next is a brief but yet great description of this amazing dish. The Enchiladas Verdes is a mexican dish made with 
             fried tortillas, chicken meat, chess, a great green sauce and sometimes accompanied with rice, onions and avocado!
         </p>
@@ -16,7 +20,7 @@
             <br>But first let's take a look at the ingredients we will need.
         </p>
 
-        <h3>Ingredients</h3>
+        <h3 class="title">Ingredients</h3>
         <ul>
             <li>One onion</li>
             <li>Oil</li>
@@ -32,7 +36,7 @@
             <li>Tomatoes</li>
         </ul>
 
-        <h3>Recipe</h3>
+        <h3 class="title">Recipe</h3>
         <ol>
             <li>First, we boil 500gr of tomatoes, the 40gr of onion,
                 5gr of garlic, 40gr of the serrano chili and a little
@@ -65,6 +69,7 @@
                 creation!
             </li>
         </ol>
+    </div>
     </body>
 
 
