--- a/index.html
+++ b/index.html
@@ -10,10 +10,21 @@
         <h1 class="title">Odin Recipes</h1>
         </header>
         
-        <ul>
-        <li><a href="recipes/enchiladas.html">Enchiladas Verdes Recipe</a></li>
-        <li><a href="recipes/friedRice.html">Fried Rice Recipe</a></li>
-        <li><a href="recipes/pizza.html">Pepperonis Pizza Recipe</a></li>
-        </ul>
+        <em> <h2>The most delicious and easiest recipes!</h2></em>
+        <div class="container1">
+        <a class=anchor href="recipes/enchiladas.html">Enchiladas Verdes Recipe</a>
+        <img class=firstC src="images/enchiladasMain.jpg" alt="picture of the finish dish (enchiladas verdes)">
+        </div>
+
+        <div class="container2">
+        <a class=anchor href="recipes/friedRice.html">Fried Rice Recipe</a>
+        <img class=firstC src="images/friedRiceMain.jpg" alt="picture of the finish dish (enchiladas verdes)">
+        </div>
+
+        <div class="container1">
+        <a class=anchor href="recipes/pizza.html">Pepperoni Pizza Recipe</a>
+        <img class=firstC src="images/pizzaMain.jpg" alt="picture of the finish dish (enchiladas verdes)">
+        </div>
+
     </body>
 </html>
